<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sdktest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_registration">Registration</string>
    <string name="action_sip_register">Sip register</string>
    <string name="action_sip_unregister">Sip unregister</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_start_dialer">StartDialer</string>
    <string name="action_dialer_exit">Exit dialer</string>
    <string name="main_openSignUp_str">Sign Up</string>
    <string name="main_openContact_str">Contact</string>
    <string name="main_openSetting_str">Setting</string>
    <string name="main_openAvatar_str">Avatar</string>
    <string name="main_openCallslog_str">Calls Log</string>

    <!-- For sign up -->
    <string name="signup_RegisterSMS_str">RegisterSMS</string>
    <string name="signup_contrycode84_str">84</string>
    <string name="signup_numberphone933_str">933551923</string>
    <string name="signup_ActivateSMS_str">ActivateSMS</string>
    <string name="signup_ChangePhoneNumberWithSMS_str">ChangePhoneNumberWithSMS</string>
    <string name="signup_ActivateChangedNumber_str">ActivateChangedNumber</string>
    <string name="signup_loginWithoutPassword_str">LoginWithoutPassword</string>
    <string name="signup_HintCountryCode_str">CountryCode</string>
    <string name="signup_HintPhonenumber_str">PhoneNumber</string>
    <string name="signup_HintVerifyCode_str">VerifyCode</string>
    <!-- For contact -->
    <string name="contact_Fetch_str">Fetch</string>
    <string name="contact_Fetch1_str">Fetch 1</string>
    <string name="contact_Fetch2_str">Fetch 2</string>
    <string name="contact_AddContactListener_str">AddContactListener</string>
    <string name="contact_CheckForChange_str">CheckForChange</string>
    <string name="contact_ContainsVippieNumber_str">ContainsVippieNumber</string>
    <string name="contact_ContainsVippieNumbersCacheds_str">ContainsVippieNumbersCacheds</string>
    <string name="contact_GetPhonePhoto_str">contactGetPhonePhoto</string>
    <string name="contact_GetContactPhoto_str">GetContactPhoto</string>
    <string name="contact_GetNumberForVippie_str">GetNumberForVippie</string>
    <string name="contact_GetVippieLoginForNumber_str">GetVippieLoginForNumber</string>
    <string name="contact_GetVippiePhones_str">GetVippiePhones</string>
    <string name="contact_HasVippieNumber_str">HasVippieNumber</string>
    <string name="contact_IsVippieId_str">IsVippieId</string>
    <string name="contact_IsVippieNumber_str">IsVippieNumber</string>
    <string name="contact_PhoneForVippieNumber_str">PhoneForVippieNumber</string>
    <string name="contact_PrepareNumber_str">PrepareNumber</string>
    <string name="contact_RegisterListener_str">RegisterListener</string>
    <string name="contact_RemoveContactListener_str">RemoveContactListener</string>
    <string name="contact_RequestAddNew_str">RequestAddNew</string>
    <string name="contact_RequestEdit_str">RequestEdit</string>
    <string name="contact_RequestPick_str">RequestPick</string>
    <string name="contact_RequestView_str">RequestView</string>
    <string name="contact_UnregisterListener_str">UnregisterListener</string>
    <string name="contact_VerifyNumber_str">VerifyNumber</string>

    <!-- Activity setting -->
    <string name="setting_getcountrycode_str">Get Country Code</string>
    <string name="setting_getdisplayname_str">Get Display Name</string>
    <string name="setting_getRegistrationNumber_str">Get Registration Number</string>
    <string name="setting_isRegistered_str">is Registered</string>

    <!-- Activity avatar -->
    <string name="avatar_addAvatarListener_str">add Avatar Listener</string>
    <string name="avatar_getAvatar_str">get Avatar</string>
    <string name="avatar_getAvatarFullPath_str">get Avatar Full Path</string>
    <string name="avatar_getMyAvatar_str">get MyAvatar</string>
    <string name="avatar_getTempThumbnailAvatar_str">get Temp Thumbnail Avatar</string>
    <string name="avatar_getThumbnailFilename_str">get Thumbnail Filename</string>
    <string name="avatar_loadAvatarImageBitmap_str">load Avatar Image Bitmap</string>
    <string name="avatar_loadMyAvatar_str">load My Avatar</string>
    <string name="avatar_loadTempThumbnailImageBitmap_str">load Temp Thumbnail Image Bitmap</string>
    <string name="avatar_loadThumbnailImageBitmap_str">load Thumbnail Image Bitmap</string>
    <string name="avatar_removeAvatarListener_str">remove Avatar Listener</string>
    <string name="avatar_sendAvatar_str">send Avatar</string>

    <!-- Activity CallsLog -->
    <string name="callslog_addcallslog_str">Add</string>
    <string name="callslog_fetchcallslog_str">Fetch</string>
    <string name="callslog_fetchcallslogtype_str">Fetch Type</string>
    <string name="callslog_fetchcallslogtypenumber_str">Fetch Type and Number</string>
    <string name="callslog_fetchcallslognumber_str">Fetch Number</string>
    <string name="callslog_fetchIncomingByNumber_str">Fetch Incoming By Number</string>
    <string name="callslog_fetchOutgoingByNumber_str">Fetch Outgoing By Number</string>
    <string name="callslog_CallslogregisterListener_str">Register sListener</string>
    <string name="callslog_removecallslog_str">Remove</string>
    <string name="callslog_removecallslogentry_str">Remove Entry</string>
    <string name="callslog_removecallslogtype_str">Remove Type</string>
    <string name="callslog_Removecallslognumber_str">Remove Number</string>
    <string name="callslog_RemovecallslogTypeNumber_str">Remover Type And Number</string>
    <string name="callslog_removeGroupcallslog_str">Remove Group</string>
    <string name="callslog_unregisterListenercalslog_str">unregister Listener calslog</string>

</resources>