<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="350dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/contact_FetchClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_Fetch_str" />

            <Button
                android:id="@+id/contact_Fetch1Click_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_Fetch1_str" />

            <Button
                android:id="@+id/contact_Fetch2Click_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_Fetch2_str" />

            <Button
                android:id="@+id/contact_AddContactListenerClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_AddContactListener_str" />

            <Button
                android:id="@+id/contact_CheckForChangeClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_CheckForChange_str" />

            <Button
                android:id="@+id/contact_ContainsVippieNumberClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_ContainsVippieNumber_str" />

            <Button
                android:id="@+id/contact_ContainsVippieNumbersCachedsClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_ContainsVippieNumbersCacheds_str" />

             <Button
                android:id="@+id/contact_GetPhonePhotoClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_GetPhonePhoto_str" />
             
            <Button
                android:id="@+id/contact_GetContactPhotoClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_GetContactPhoto_str" />

            <Button
                android:id="@+id/contact_GetNumberForVippieClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_GetNumberForVippie_str" />

            <Button
                android:id="@+id/contact_GetVippieLoginForNumberClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_GetVippieLoginForNumber_str" />

            <Button
                android:id="@+id/contact_GetVippiePhonesClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_GetVippiePhones_str" />

            <Button
                android:id="@+id/contact_HasVippieNumberClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_HasVippieNumber_str" />

            <Button
                android:id="@+id/contact_IsVippieIdClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_IsVippieId_str" />

            <Button
                android:id="@+id/contact_IsVippieNumberClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_IsVippieNumber_str" />

            <Button
                android:id="@+id/contact_PrepareNumberClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_PrepareNumber_str" />

            <Button
                android:id="@+id/contact_RegisterListenerClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_RegisterListener_str" />

            <Button
                android:id="@+id/contact_RemoveContactListenerClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_RemoveContactListener_str" />

            <Button
                android:id="@+id/contact_RequestAddNewClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_RequestAddNew_str" />

            <Button
                android:id="@+id/contact_RequestEditClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_RequestEdit_str" />

            <Button
                android:id="@+id/contact_RequestViewClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_RequestView_str" />
            
            <Button
                android:id="@+id/contact_RequestPickClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_RequestPick_str" />

          

            <Button
                android:id="@+id/contact_VerifyNumberClick_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_VerifyNumber_str" />
        </LinearLayout>
    </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/contact_img_v_id"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/contact_RegisterListener_str" />

            <TextView
                android:id="@+id/contact_tv_status_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/contact_tv_result_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>