<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        
        android:layout_width="match_parent"
        android:layout_height="300dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/callslog_addcallslog_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callslog_addcallslog_str" />

            <Button
                android:id="@+id/callslog_fetchcallslog_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callslog_fetchcallslog_str" />

            <Button
                android:id="@+id/callslog_fetchcallslogtype_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callslog_fetchcallslogtype_str" />
            
            <Button
                android:id="@+id/callslog_fetchcallslogtypenumber_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callslog_fetchcallslogtypenumber_str" />
            

            <Button
                android:id="@+id/callslog_fetchcallslognumber_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callslog_fetchcallslognumber_str" />

            <Button
                android:id="@+id/callslog_fetchIncomingByNumber_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callslog_fetchIncomingByNumber_str" />

            <Button
                android:id="@+id/callslog_fetchOutgoingByNumber_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callslog_fetchOutgoingByNumber_str" />

            <Button
                android:id="@+id/callslog_CallslogregisterListener_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callslog_CallslogregisterListener_str" />
            
             <Button
                android:id="@+id/callslog_removecallslog_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callslog_removecallslog_str" />

            <Button
                android:id="@+id/callslog_removecallslogentry_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callslog_removecallslogentry_str" />

            <Button
                android:id="@+id/callslog_removecallslogtype_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callslog_removecallslogtype_str" />

            <Button
                android:id="@+id/callslog_Removecallslognumber_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callslog_Removecallslognumber_str" />

            <Button
                android:id="@+id/callslog_RemovecallslogTypeNumber_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callslog_RemovecallslogTypeNumber_str" />

            <Button
                android:id="@+id/callslog_removeGroupcallslog_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callslog_removeGroupcallslog_str" />

            <Button
                android:id="@+id/callslog_unregisterListenercalslog_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callslog_unregisterListenercalslog_str" />
        </LinearLayout>
    </ScrollView>
    
     <TextView
        android:id="@+id/callslog_tv_CallsLogResult_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
</LinearLayout>