<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/avatar_addAvatarListener_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar_addAvatarListener_str" />

            <Button
                android:id="@+id/avatar_getAvatar_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar_getAvatar_str" />

            <Button
                android:id="@+id/avatar_getAvatarFullPath_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar_getAvatarFullPath_str" />

            <Button
                android:id="@+id/avatar_getMyAvatar_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar_getMyAvatar_str" />

            <!--  -->

            <Button
                android:id="@+id/avatar_getTempThumbnailAvatar_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar_getTempThumbnailAvatar_str" />

            <Button
                android:id="@+id/avatar_getThumbnailFilename_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar_getThumbnailFilename_str" />

            <Button
                android:id="@+id/avatar_loadAvatarImageBitmap_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar_loadAvatarImageBitmap_str" />

            <Button
                android:id="@+id/avatar_loadMyAvatar_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar_loadMyAvatar_str" />

            <!--  -->

            <Button
                android:id="@+id/avatar_loadTempThumbnailImageBitmap_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar_loadTempThumbnailImageBitmap_str" />

            <Button
                android:id="@+id/avatar_loadThumbnailImageBitmap_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar_loadThumbnailImageBitmap_str" />

            <Button
                android:id="@+id/avatar_removeAvatarListener_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar_removeAvatarListener_str" />

            <Button
                android:id="@+id/avatar_sendAvatar_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar_sendAvatar_str" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/avatar_img_avatar_id"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/avatar_sendAvatar_str" />

    <TextView
        android:id="@+id/avatar_tv_avatarResult_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>