<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/signup_et_countrycodestr_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/signup_HintCountryCode_str"
            android:inputType="text"
            android:text="@string/signup_contrycode84_str" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/signup_et_phonestr_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/signup_HintPhonenumber_str"
            android:inputType="text"
            android:text="@string/signup_numberphone933_str" >
        </EditText>

        <EditText
            android:id="@+id/signup_et_verifycode_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/signup_HintVerifyCode_str"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/signup_registerSmsClick_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_RegisterSMS_str" />

        <Button
            android:id="@+id/signup_activateSMSClick_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_ActivateSMS_str" />

        <Button
            android:id="@+id/signup_changePhoneNumberWithSMSClick_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_ChangePhoneNumberWithSMS_str" />

        <Button
            android:id="@+id/signup_activateChangedNumberClick_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_ActivateChangedNumber_str" />

        <Button
            android:id="@+id/signup_loginWithoutPasswordClick_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_loginWithoutPassword_str" />       
    </LinearLayout>

    <TextView
        android:id="@+id/signup_tv_status_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/signup_tv_result_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>