<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<Button
            android:id="@+id/setting_getcountrycode_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_getcountrycode_str" />

        <Button
            android:id="@+id/setting_getdisplayname_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_getdisplayname_str" />

        <Button
            android:id="@+id/setting_getRegistrationNumber_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_getRegistrationNumber_str" />

        <Button
            android:id="@+id/setting_isRegistered_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_isRegistered_str" />
        
         <TextView
        	android:id="@+id/setting_result_id"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" />
        
</LinearLayout>
